--- a/projetointegrador/pagina.html
+++ b/projetointegrador/pagina.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Promovendo a Inclusão Digital">
     <title>Conecta Fácil</title>
-    <link rel="stylesheet" type="text/css" href="pagina.css">
+    <link rel="stylesheet" type="text/css" href="/pagina.css">
     <script src="script.js" defer></script> 
 </head>
 
