--- a/pagina.html
+++ b/pagina.html
@@ -19,7 +19,7 @@
     <header class="cabecalho">
         <img class="cabecalho-imagem" src="Images/logo%20projeto.jpeg" alt="Logo Projeto Conecta Fácil">
         <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-item" href="/sobre nos.html" accesskey="1" title="Ir para Quem Somos (Alt+1)">Quem Somos (Alt+1)</a>
+            <a class="cabecalho-menu-item" href="//sobre nos.html" accesskey="1" title="Ir para Quem Somos (Alt+1)">Quem Somos (Alt+1)</a>
             <div class="submenu">
                 <a class="cabecalho-menu-item" href="#" accesskey="2" title="Ir para Produtos (Alt+2)">Produtos (Alt+2)</a>
                 <ul class="submenu-lista">
