--- a/pagina.html
+++ b/pagina.html
@@ -17,7 +17,7 @@
     </div>
 
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="Images/logo%20projeto.jpeg" alt="Logo Projeto Conecta Fácil">
+        <img class="cabecalho-imagem" src="//Images/logo%20projeto.jpeg" alt="Logo Projeto Conecta Fácil">
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item" href="//sobre nos.html" accesskey="1" title="Ir para Quem Somos (Alt+1)">Quem Somos (Alt+1)</a>
             <div class="submenu">
@@ -53,7 +53,7 @@
                     </form>
                 </a>
             </div>
-            <img class="conteudo-principal-imagem" src="Images/Imagem1.png" alt="Imagem principal de um dispositivo">
+            <img class="conteudo-principal-imagem" src="/Images/Imagem1.png" alt="Imagem principal de um dispositivo">
         </section>
 
         <section class="conteudo-secundario">
@@ -68,7 +68,7 @@
     </main>
 
     <footer class="rodape">
-        <img class="rodape-imagem" src="Images/Imagem%20Formas%20de%20Pagamento.png" alt="Formas de pagamento aceitas">
+        <img class="rodape-imagem" src="/Images/Imagem%20Formas%20de%20Pagamento.png" alt="Formas de pagamento aceitas">
     </footer>
 </body>
 </html>
