--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </div>
 
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="Images/logo%20projeto.jpeg" alt="Logo Projeto Conecta Fácil">
+        <img class="cabecalho-imagem" src="logo%20projeto.jpeg" alt="Logo Projeto Conecta Fácil">
         <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-item" href="/sobre nos.html" accesskey="1" title="Ir para Quem Somos (Alt+1)">Quem Somos (Alt+1)</a>
+            <a class="cabecalho-menu-item" href="sobre nos.html" accesskey="1" title="Ir para Quem Somos (Alt+1)">Quem Somos (Alt+1)</a>
             <div class="submenu">
                 <a class="cabecalho-menu-item" href="#" accesskey="2" title="Ir para Produtos (Alt+2)">Produtos (Alt+2)</a>
                 <ul class="submenu-lista">
@@ -29,7 +29,7 @@
                     <li><a href="produto4.html">Smartphone ObaSmart Conecta MAX 2 64GB - OB054</a></li>
                 </ul>
             </div>
-            <a class="cabecalho-menu-item" href="/Images/Apresentação1/Itens.jpg" accesskey="3" title="Ir para Carrinho (Alt+3)">
+            <a class="cabecalho-menu-item" href="Itens.jpg" accesskey="3" title="Ir para Carrinho (Alt+3)">
                 <img src="Images/carrinho.jpg" alt="Carrinho" class="icone-carrinho">
                  (Alt+3)    
             </a>    
