--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="logo%20projeto.jpeg" alt="Logo Projeto Conecta Fácil">
+        <img class="cabecalho-imagem" src="Logo Projeto.jpeg" alt="Logo Projeto Conecta Fácil">
         <nav class="cabecalho-menu">
             <a class="cabecalho-menu-item" href="sobre nos.html" accesskey="1" title="Ir para Quem Somos (Alt+1)">Quem Somos (Alt+1)</a>
             <div class="submenu">
