--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 </ul>
             </div>
             <a class="cabecalho-menu-item" href="Itens.jpg" accesskey="3" title="Ir para Carrinho (Alt+3)">
-                <img src="Images/carrinho.jpg" alt="Carrinho" class="icone-carrinho">
+                <img src="carrinho.jpg" alt="Carrinho" class="icone-carrinho">
                  (Alt+3)    
             </a>    
             
@@ -53,7 +53,7 @@
                     </form>
                 </a>
             </div>
-            <img class="conteudo-principal-imagem" src="Images/Imagem1.png" alt="Imagem principal de um dispositivo">
+            <img class="conteudo-principal-imagem" src="Imagem1.png" alt="Imagem principal de um dispositivo">
         </section>
 
         <section class="conteudo-secundario">
