--- a/sobre nos.html
+++ b/sobre nos.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conectafacilsobrenos</title>
-    <link href="/sobre nos.css" rel="stylesheet">
+    <link href="sobre nos.css" rel="stylesheet">
 </head>
 <body>
     <header>
         <div id="title">
-            <img src="/Images/Logo Projeto.jpeg" alt="">
+            <img src="Logo Projeto.jpeg" alt="">
         </div>       
     </header>
     <main>
