--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     </div>
 
     <header class="cabecalho">
-        <img class="cabecalho-imagem" src="/Images/logo-projeto.jpeg" alt="Logo Projeto Conecta Fácil">
+        <img class="cabecalho-imagem" src="logo-projeto.jpeg" alt="Logo Projeto Conecta Fácil">
         <nav class="cabecalho-menu">
-            <a class="cabecalho-menu-item" href="/sobre-nos.html" accesskey="1" title="Ir para Quem Somos (Alt+1)">Quem Somos (Alt+1)</a>
+            <a class="cabecalho-menu-item" href="sobre-nos.html" accesskey="1" title="Ir para Quem Somos (Alt+1)">Quem Somos (Alt+1)</a>
             <div class="submenu">
                 <a class="cabecalho-menu-item" href="#" accesskey="2" title="Ir para Produtos (Alt+2)">Produtos (Alt+2)</a>
                 <ul class="submenu-lista">
@@ -29,8 +29,8 @@
                     <li><a href="produto4.html">Smartphone ObaSmart Conecta MAX 2 64GB - OB054</a></li>
                 </ul>
             </div>
-            <a class="cabecalho-menu-item" href="/Images/Itens.jpg" accesskey="3" title="Ir para Carrinho (Alt+3)">
-                <img src="/Images/Carrinho.jpg" alt="Carrinho" class="icone-carrinho">
+            <a class="cabecalho-menu-item" href="Itens.jpg" accesskey="3" title="Ir para Carrinho (Alt+3)">
+                <img src="Carrinho.jpg" alt="Carrinho" class="icone-carrinho">
                  (Alt+3)    
             </a>    
             
@@ -53,7 +53,7 @@
                     </form>
                 </a>
             </div>
-            <img class="conteudo-principal-imagem" src="Images/Imagem1.png" alt="Imagem principal de um dispositivo">
+            <img class="conteudo-principal-imagem" src="Imagem1.png" alt="Imagem principal de um dispositivo">
         </section>
 
         <section class="conteudo-secundario">
@@ -68,7 +68,7 @@
     </main>
 
     <footer class="rodape">
-        <img class="rodape-imagem" src="/Images/formas-pgt.png" alt="Formas de pagamento aceitas">
+        <img class="rodape-imagem" src="formas-pgt.png" alt="Formas de pagamento aceitas">
     </footer>
 </body>
 </html>
